--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.0",
     "mapbox-gl": "^2.9.2",
     "next": "12.2.0",
     "react": "18.2.0",
