--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^3.3.0",
     "amplify": "^0.0.11",
+    "aws-amplify": "^4.3.30",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
