--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.2.0",
+    "formik": "^2.2.9",
     "mapbox-gl": "^2.9.2",
     "next": "12.2.0",
     "react": "18.2.0",
